[gd_scene load_steps=6 format=3 uid="uid://03w5vd2yrcyx"]

[ext_resource type="Script" path="res://scenes/resultMenu.gd" id="1_ef8cm"]
[ext_resource type="FontFile" uid="uid://cyxb012guiy5q" path="res://assets/fonts/DUNGRG__.TTF" id="1_monx1"]
[ext_resource type="Texture2D" uid="uid://c1q0m4pbg7v5e" path="res://Icons/UI manager/return.png" id="2_7cs3f"]
[ext_resource type="Texture2D" uid="uid://i7sv7hdr4m5f" path="res://Icons/UI manager/next.png" id="3_2lcx2"]
[ext_resource type="Texture2D" uid="uid://duy4u7ywqq324" path="res://Icons/UI manager/home.png" id="4_uiimm"]

[node name="Level Result" type="CanvasLayer"]
script = ExtResource("1_ef8cm")

[node name="ui" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.239216)

[node name="GameCompleted" type="Panel" parent="ui"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -660.0
offset_top = -390.5
offset_right = 660.0
offset_bottom = 390.5
grow_horizontal = 2
grow_vertical = 2

[node name="LabelComplete" type="Label" parent="ui/GameCompleted"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -172.0
offset_top = 144.0
offset_right = 172.0
offset_bottom = 229.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_monx1")
theme_override_font_sizes/font_size = 70
text = "Game Completed
"
horizontal_alignment = 1

[node name="TimerLabel" type="Label" parent="ui/GameCompleted"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -161.5
offset_right = 64.0
offset_bottom = -92.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50

[node name="HBoxContainer" type="HBoxContainer" parent="ui/GameCompleted"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.0
offset_top = -50.0
offset_right = 154.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="restart" type="TextureButton" parent="ui/GameCompleted/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
texture_normal = ExtResource("2_7cs3f")

[node name="next" type="TextureButton" parent="ui/GameCompleted/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
texture_normal = ExtResource("3_2lcx2")

[node name="home" type="TextureButton" parent="ui/GameCompleted/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
texture_normal = ExtResource("4_uiimm")

[connection signal="pressed" from="ui/GameCompleted/HBoxContainer/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="ui/GameCompleted/HBoxContainer/next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="ui/GameCompleted/HBoxContainer/home" to="." method="_on_home_pressed"]
